spark/manifests/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spark
  namespace: juliaaano
spec:
  hosts:
  - "*"
  gateways:
  - spark
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        port:
          number: 8000
        host: spark
